fix: mount nas
