# internal/domain/donation/handler.go
@@ -19,6 +19,14 @@ func NewHandler(service *Service) *Handler {
 	return &Handler{Service: service}
 }
 
+// GetAll godoc
+// @Summary Get all donations
+// @Description Get list of donations
+// @Tags donation
+// @Produce json
+// @Security BearerAuth
+// @Success 200 {object} map[string]interface{}
+// @Router /master/donations [get]
 func (h *Handler) GetAll(c *gin.Context) {
 	items, err := h.Service.GetAll(c.Request.Context())
 	if err != nil {
@@ -28,6 +36,16 @@ func (h *Handler) GetAll(c *gin.Context) {
 	response.Success(c, items)
 }
 
+// Create godoc
+// @Summary Create donation
+// @Description Create new donation
+// @Tags donation
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param request body CreateRequest true "Create donation"
+// @Success 200 {object} map[string]interface{}
+// @Router /master/donations [post]
 func (h *Handler) Create(c *gin.Context) {
 	var req CreateRequest
 	if err := validation.BindJSON(c, &req); err != nil {
@@ -44,6 +62,15 @@ func (h *Handler) Create(c *gin.Context) {
 	response.Success(c, donation)
 }
 
+// GetByID godoc
+// @Summary Get donation by ID
+// @Description Get detail donation
+// @Tags donation
+// @Produce json
+// @Security BearerAuth
+// @Param id path int true "Donation ID"
+// @Success 200 {object} map[string]interface{}
+// @Router /master/donations/{id} [get]
 func (h *Handler) GetByID(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -60,6 +87,17 @@ func (h *Handler) GetByID(c *gin.Context) {
 	response.Success(c, donation)
 }
 
+// Update godoc
+// @Summary Update donation
+// @Description Update existing donation
+// @Tags donation
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param id path int true "Donation ID"
+// @Param request body UpdateRequest true "Update donation"
+// @Success 200 {object} map[string]interface{}
+// @Router /master/donations/{id} [put]
 func (h *Handler) Update(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -82,6 +120,15 @@ func (h *Handler) Update(c *gin.Context) {
 	response.Success(c, donation)
 }
 
+// Delete godoc
+// @Summary Delete donation
+// @Description Delete donation
+// @Tags donation
+// @Produce json
+// @Security BearerAuth
+// @Param id path int true "Donation ID"
+// @Success 200 {object} map[string]interface{}
+// @Router /master/donations/{id} [delete]
 func (h *Handler) Delete(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
